[gd_scene load_steps=7 format=2]

[ext_resource path="res://textures/resume.png" type="Texture" id=1]
[ext_resource path="res://textures/applyer_body01.png" type="Texture" id=2]
[ext_resource path="res://textures/applyer_head01.png" type="Texture" id=3]
[ext_resource path="res://scripts/Resume.gd" type="Script" id=4]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/mogihaPen_ver120/mogihaPen.ttf"

[sub_resource type="DynamicFont" id=1]
size = 28
outline_size = 1
outline_color = Color( 0.788235, 0.788235, 0.784314, 1 )
font_data = SubResource( 2 )

[node name="Resume" type="TextureRect"]
margin_left = 1156.0
margin_top = 141.0
margin_right = 1658.0
margin_bottom = 848.0
texture = ExtResource( 1 )
script = ExtResource( 4 )

[node name="ApplyerType" type="Label" parent="."]
margin_left = 273.0
margin_top = 32.0
margin_right = 333.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.756863, 0.0627451, 0.0627451, 1 )
custom_colors/font_outline_modulate = Color( 0.866667, 0.145098, 0.145098, 1 )
custom_colors/font_color_shadow = Color( 0.870588, 0.333333, 0.333333, 1 )
custom_fonts/font = SubResource( 1 )
text = "新卒"

[node name="ApplyerName" type="Label" parent="."]
margin_left = 39.0
margin_top = 94.0
margin_right = 238.0
margin_bottom = 125.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "田中　太郎"
valign = 1

[node name="ApplyerAge" type="Label" parent="."]
margin_left = 267.0
margin_top = 75.0
margin_right = 327.0
margin_bottom = 109.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "22歳"

[node name="ApplyerGender" type="Label" parent="."]
margin_left = 267.0
margin_top = 112.0
margin_right = 327.0
margin_bottom = 147.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "男"
align = 1
valign = 1

[node name="ApplyerLastEducation" type="Label" parent="."]
margin_left = 45.0
margin_top = 192.0
margin_right = 466.0
margin_bottom = 249.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "T大学卒"
valign = 1
autowrap = true

[node name="ApplyerWorkHistory" type="Label" parent="."]
margin_left = 39.0
margin_top = 289.0
margin_right = 468.0
margin_bottom = 348.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "アルバイト"
valign = 1
autowrap = true

[node name="ApplyerLicense" type="Label" parent="."]
margin_left = 40.0
margin_top = 387.0
margin_right = 467.0
margin_bottom = 444.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "ITパスポート"
valign = 1
autowrap = true

[node name="ApplyerAppeal" type="Label" parent="."]
margin_left = 39.0
margin_top = 484.0
margin_right = 468.0
margin_bottom = 541.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Linux 出来ます"
valign = 1
autowrap = true

[node name="ApplyerPreferredDepartment" type="Label" parent="."]
margin_left = 38.0
margin_top = 582.0
margin_right = 470.0
margin_bottom = 639.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "CentOS部"
valign = 1
autowrap = true

[node name="ApplyerPhoto" type="ColorRect" parent="."]
visible = false
margin_left = 362.0
margin_top = 23.0
margin_right = 476.0
margin_bottom = 175.0
color = Color( 0.239216, 0.352941, 0.741176, 1 )

[node name="ApplyerBody" type="TextureRect" parent="ApplyerPhoto"]
visible = false
margin_top = -24.0
margin_right = 701.0
margin_bottom = 1056.0
rect_scale = Vector2( 0.163, 0.163 )
texture = ExtResource( 2 )

[node name="ApplyerHead" type="TextureRect" parent="ApplyerPhoto"]
visible = false
margin_top = -22.0
margin_right = 701.0
margin_bottom = 1058.0
rect_scale = Vector2( 0.163, 0.163 )
texture = ExtResource( 3 )
